@@ -1,3 +1,6 @@
+2011-06-07 yusei
+* Set auditor proxy role to Base_getConversionFormatItemList. Anybody should be able to view conversion format list.
+
 Fix CategoryTool_constructCategoryTableToExport. Sometimes categories were wrongly sorted and incorrect category definitions were exported.
 
 2011-02-25 arnaud.fontaine
